# LearningOpenGL

./: .gitattributes  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h  glad.c  main.cpp
shaders/: fragment.glsl  vertex.glsl
